# mcs_multipass_vtk

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.txt
documents/: render times.xlsx
resources/: CCtracts.vtk  Distortion.fs  Distortion.vs  FullBrain.vtk  FullBrain2.vtk  simple.fs  simple.vs  vtkOVRPostShaderFull_fs.glsl  vtkOVRPostShaderSimple_fs.glsl
src/: CMakeLists.txt  brain.cpp  cone.cpp  cone_interactor.cpp  main.cpp  multipass_vtk.cpp  paraview_port.cpp  vtkRiftRenderPass.cpp  vtkRiftRenderPass.h  vtkSaliencyPass.cpp  vtkSaliencyPass.h
src/fbo/: framebufferObject.h  glErrorUtil.cpp  glErrorUtil.h  renderbuffer.h
src/glsl/: glinfo.cpp  glinfo.h  glsl.cpp  glsl.h  glutils.cpp  glutils.h  textureInfo.h
src/paraview_port/: vtkDualStereoPass.cxx  vtkDualStereoPass.h  vtkOVRCamera.cxx  vtkOVRCamera.h  vtkOVRPostPass.cxx  vtkOVRPostPass.h
src/paraview_port/paraview/: vtkPVRenderViewOculusRift.cxx  vtkPVRenderViewOculusRift.h  vtkVRHMDTrackStyle.cxx  vtkVRHMDTrackStyle.h
src/riftclass/: riftclass.cxx  riftclass.h
